added collect to list in filter mappings method